# MusicPlayer

./: Cargo.toml  README.md  prerequisities.txt
src/: main.rs  mp3.rs  mp3decoder.rs  player.rs  playlist.rs  toolbox.rs
