[package]
name = "music_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk4 = "0.5.5"
gio = "0.16.7"
gdk-pixbuf = "0.16.7"
id3 = "1.6.0"
crossbeam = "0.8.2"
simplemad = "0.9.0"
#pulse-simple = "0.0.0"
rodio = "0.17.1"
symphonia = "0.5.2"
